corrected nav buttons that had issues with spacing when resizing

--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5 {
 header{
 	height: 80px;
 	display: flex;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
 }
 .top-section{
@@ -80,12 +80,12 @@ header{
 body nav{
     width: 60%;
     display: flex;
+    justify-content: space-evenly;
 }
 body nav a{
-	color: lightgrey;
+    color: lightgrey;
     text-decoration: none;
 	font-size: 23.8px;
-    width: 100%;
 }
 body nav a:hover{
     color: black;
